test/files/neg/deprecated-annots.check
deprecated-annots.scala:9: error: @scala.annotation.elidable is ignored in Scala 3
Scala 3 migration messages are errors under -Xsource:3. Use -Wconf / @nowarn to filter them or add -Xmigration to demote them to warnings.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=D
  @annotation.elidable(42)
   ^
1 error
